Added basic version of login and registration service and modified UI.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:fitsSystemWindows="true"
+    tools:context="MainActivity">
 
     <LinearLayout
-        android:id="@+id/first"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <Button
-            android:id="@+id/addBookButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/addBook"/>
+            <Button
+                android:id="@+id/addBookButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/addBook"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/removeBookButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/removeBook" />
+            <Button
+                android:id="@+id/removeBookButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/removeBook"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/borrowBookButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/borrowBook"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
-    <LinearLayout
-        android:id="@+id/second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/first">
-        <Button
-            android:id="@+id/borrowBookButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/borrowBook" />
-
-        <Button
-            android:id="@+id/returnBookButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/returnBook" />
-
-    </LinearLayout>
+            <Button
+                android:id="@+id/returnBookButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/returnBook"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
         <Button
             android:id="@+id/aboutButton"
-            android:layout_width="wrap_content"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/about"
-            android:layout_below="@+id/second"
-            android:layout_centerHorizontal="true"/>
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+
 
         <Button
-            android:id="@+id/exitButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/sign_out"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/exit"
-            android:layout_below="@+id/aboutButton"
-            android:layout_centerHorizontal="true"/>
+            android:layout_marginTop="16dp"
+            android:background="@color/colorPrimary"
+            android:text="@string/btn_sign_out"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
 
-</RelativeLayout>
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
