Added add book functionality and some new requirements.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,16 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <Button
+                android:id="@+id/listOfBooksButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/listOfBooks"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+
+            <Button
                 android:id="@+id/addBookButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
