--- a/app/src/main/res/layout/activity_return_book.xml
+++ b/app/src/main/res/layout/activity_return_book.xml
@@ -5,4 +5,15 @@
     android:orientation="vertical">
 
 
+    <ProgressBar
+        android:id="@+id/ReturnBookProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ListView
+        android:id="@+id/ReturnBookListView"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent">
+    </ListView>
+
 </LinearLayout>
