Update about section

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,4 +5,12 @@
     android:orientation="vertical">
 
 
+    <EditText
+        android:id="@+id/loggedAs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:editable="false"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
 </LinearLayout>
