Borrowing and returning books with roles - bugfix

--- a/app/src/main/res/layout/activity_confirmations_layout.xml
+++ b/app/src/main/res/layout/activity_confirmations_layout.xml
@@ -5,21 +5,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/returnBookListText"
+        android:id="@+id/confirmBorrowBookListText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.9"
         android:padding="10dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:singleLine="false"/>
+        <!--android:scrollHorizontally="false"-->
+        <!--android:inputType="textMultiLine"-->
+        <!--android:singleLine="false"/>-->
 
     <Button
-        android:id="@+id/returnBookButton"
+        android:id="@+id/confirmBorrowBookButton"
         android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
-        android:text="@string/returnBookShort">
+        android:text="@string/ConfirmBorrowBookSubmit">
     </Button>
+
 
 </LinearLayout>
