--- a/app/src/main/res/layout/activity_borrow_books.xml
+++ b/app/src/main/res/layout/activity_borrow_books.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".activity.BorrowBookActivity">
+    tools:context=".activity.student.BorrowBookActivity">
 
         <EditText
             android:id="@+id/BorrowBookAuthorEditText"
