--- a/app/src/main/res/layout/activity_borrow_books_layout.xml
+++ b/app/src/main/res/layout/activity_borrow_books_layout.xml
@@ -8,11 +8,18 @@
         android:id="@+id/borrowBookListText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.9"
+        android:layout_weight="0.8"
         android:padding="10dp"
+        android:textColor="#000000"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#000000" />
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/reserveBookButton"
+        android:layout_width="48dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:text="Reserve" />
 
     <Button
         android:id="@+id/borrowBookButton"
