--- a/app/src/main/res/layout/activity_common_main.xml
+++ b/app/src/main/res/layout/activity_common_main.xml
@@ -55,6 +55,16 @@
                 android:textStyle="bold" />
 
             <Button
+                android:id="@+id/checkStateBookButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/checkStateBook"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+
+            <Button
                 android:id="@+id/borrowBookButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
